fix: issue where centered elements were rendered blurred

--- a/content/css/contact.scss
+++ b/content/css/contact.scss
@@ -39,10 +39,10 @@ a:hover {
 }
 
 .centered {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .content {
